--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^9.0.5",
     "react-tooltip": "^4.2.21",
     "useref": "^1.4.3",
     "web-vitals": "^1.1.2"
